--- a/intelligent_application/frontend/package.json
+++ b/intelligent_application/frontend/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.13",
+    "@patternfly/react-core": "^5.0.0",
     "axios": "^1.3.4",
     "http-proxy-middleware": "^2.0.6",
     "lodash": "^4.17.21",
