--- a/intelligent_application/package.json
+++ b/intelligent_application/package.json
@@ -23,20 +23,21 @@
   "author": "",
   "license": "GPLv3",
   "dependencies": {
+    "@fastify/autoload": "^5.7.1",
+    "@fastify/sensible": "^5.2.0",
+    "@fastify/static": "^6.9.0",
+    "@fastify/websocket": "^7.1.3",
     "axios": "^1.3.4",
     "concurrently": "^7.6.0",
     "env-var": "^7.3.0",
     "fastify": "^4.15.0",
-    "@fastify/autoload": "^5.7.1",
     "fastify-plugin": "^4.5.0",
-    "@fastify/sensible": "^5.2.0",
-    "@fastify/static": "^6.9.0",
-    "@fastify/websocket": "^7.1.3",
     "form-data": "^4.0.0",
     "got": "^12.6.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "qrcode": "^1.5.1",
+    "react-json-view": "^1.21.3",
     "uuid": "^9.0.0",
     "ws": "^8.13.0"
   },
