--- a/intelligent_application/.env.default
+++ b/intelligent_application/.env.default
@@ -3,7 +3,7 @@ FRONTEND_DEV_PORT=3000
 BACKEND_DEV_PORT=8080
 
 OBJECT_DETECTION_URL=http://localhost:8000/predictions
-
+INVENTORY_URL=http://ia-inference.object-detection-app.svc.cluster.local:8080
 CONTAINER_BUILDER=docker
 IMAGE_REPOSITORY=
 SOURCE_REPOSITORY_URL=
